agregue los colores a de titulos en las card

--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
                         <div class="card-header"><h5 class="card-title tarjeta-titulo">MOCHILA BÁSICA VIOLETA (UNISEX)</h5></div>
                         <div class="card-body text-white">
                             <img src="./gallery/new/basic backpack violeta.jpg" alt="basic-backpack-violeta" class="tarjeta__imagen border border-secondary rounded px-2 py-2">
-                            <h5 class="card-text text-primary pt-2">$9.988</h5>
-                            <p>3 cuotas sin interés de <span class="text-primary">$3.329,33</span></p>
+                            <h5 class="card-text pt-2">$9.988</h5>
+                            <p>3 cuotas sin interés de <span class="card-text_precio">$3.329,33</span></p>
                             <button type="button" class="btn btn-dark btn-sm btn-outline-light d-block mx-auto my-2">Comprar</button>
                             <button type="button" class="btn btn-dark btn-sm btn-outline-light d-block mx-auto my-2"><i class="bi bi-cart px-1"></i>Añadir al carrito</button>
                         </div>
@@ -91,8 +91,8 @@
                         <div class="card-header"><h5 class="card-title tarjeta-titulo">GORRO WALTER BORDÓ (UNISEX)</h5></div>
                             <div class="card-body text-white">
                             <img src="./gallery/new/walter beanie bordo.jpg" alt="walter-beanie-bordo" class="tarjeta__imagen border border-secondary rounded px-2 py-2">
-                            <h5 class="card-text text-primary pt-2">$3.220</h5>
-                            <p>3 cuotas sin interés de <span class="text-primary">$1.073,33</span></p>
+                            <h5 class="card-text pt-2">$3.220</h5>
+                            <p>3 cuotas sin interés de <span class="card-text_precio">$1.073,33</span></p>
                             <button type="button" class="btn btn-dark btn-sm btn-outline-light d-block mx-auto my-2">Comprar</button>
                             <button type="button" class="btn btn-dark btn-sm btn-outline-light d-block mx-auto my-2"><i class="bi bi-cart px-1"></i>Añadir al carrito</button>
                         </div>
@@ -103,8 +103,8 @@
                         <div class="card-header"><h5 class="card-title tarjeta-titulo">GORRA TEMPLE AZUL (UNISEX)</h5></div>
                         <div class="card-body text-white">
                             <img src="./gallery/new/temple snapback azul.jpg" alt="temple-snapback-azul" class="tarjeta__imagen border border-secondary rounded px-2 py-2">
-                            <h5 class="card-text text-primary pt-2">$4.375</h5>
-                            <p>3 cuotas sin interés de <span class="text-primary">$1.458,33</span></p>
+                            <h5 class="card-text pt-2">$4.375</h5>
+                            <p>3 cuotas sin interés de <span class="card-text_precio">$1.458,33</span></p>
                             <button type="button" class="btn btn-dark btn-sm btn-outline-light d-block mx-auto my-2">Comprar</button>
                             <button type="button" class="btn btn-dark btn-sm btn-outline-light d-block mx-auto my-2"><i class="bi bi-cart px-1"></i>Añadir al carrito</button>
                         </div>
@@ -115,8 +115,8 @@
                         <div class="card-header"><h5 class="card-title tarjeta-titulo">RIÑONERA 2 BOLSILLO GRIS (UNISEX)</h5></div>
                         <div class="card-body text-white">
                             <img src="./gallery/new/pocket fanny pack 2b gris.jpg" alt="pocket-fanny-pack-2b-gris" class="tarjeta__imagen border border-secondary rounded px-2 py-2">
-                            <h5 class="card-text text-primary pt-2">$9.250</h5>
-                            <p>3 cuotas sin interés de <span class="text-primary">$3.083,33</span></p>
+                            <h5 class="card-text pt-2">$9.250</h5>
+                            <p>3 cuotas sin interés de <span class="card-text_precio">$3.083,33</span></p>
                             <button type="button" class="btn btn-dark btn-sm btn-outline-light d-block mx-auto my-2">Comprar</button>
                             <button type="button" class="btn btn-dark btn-sm btn-outline-light d-block mx-auto my-2"><i class="bi bi-cart px-1"></i>Añadir al carrito</button>                        </div>
                     </div>
