mi index esta terminado con scss

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
     <section data-aos="fade-up">
         <article class="container-fluid unirse-red text-center">
             <h3 class="unirse-red__titulo text-center ms-4 pt-4">Únete a la comunidad de RED</h3>
-            <h5 class="unirse-red__sub text-white">¡Enterate de todo!</h5>
+            <h5 class="unirse-red__sub">¡Enterate de todo!</h5>
             <form class="row unirse-red__formulario text-white">
                 <div class="col mb-3">
                     <label for="email-usuario" class="form-label">Correo electrónico</label>
@@ -161,7 +161,7 @@
     <section id="seccion-opiniones" data-aos="fade-up">
         <h3 class="seccion-opiniones__titulo ms-4 py-3">Opiniones</h3>
         <article class="container-fluid opiniones">
-            <h4 class="opiniones-sub text-white ms-2 pb-3">Que dicen nuestros clientes</h4>
+            <h4 class="opiniones-sub ms-2 pb-3">Que dicen nuestros clientes</h4>
             <div class="row">
                 <div class="col-xl-3 col-md-3 col-sm-12">
                     <div class="card text-bg-light mb-3">
@@ -199,7 +199,7 @@
                         <div class="card-body">
                             <img src="./gallery/man/man for opinion.jpg" class="border border-dark rounded-5 rounded-circle" alt="woman for opinion">
                             <h5 class="card-title">Roberto Peña</h5>
-                            <p class="card-text"> Muy recomendable. Consiguen todo la indumentaria que necesitan.</p>
+                            <p class="card-text"> Muy recomendable. Consiguen toda la indumentaria que necesitan.</p>
                         </div>
                     </div>
                 </div>
