--- a/pages/new.html
+++ b/pages/new.html
@@ -36,7 +36,7 @@
                             Más
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="../pages/accessories.html">Accesorios</a></li>
+                            <li><a class="dropdown-item" href="./accessories.html">Accesorios</a></li>
                         </ul>
                     </li>
                     <li class="nav-item">
