--- a/pages/accessories.html
+++ b/pages/accessories.html
@@ -37,7 +37,7 @@
                             Más
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="../pages/new.html">Nuevo</a></li>
+                            <li><a class="dropdown-item" href="./new.html">Nuevo</a></li>
                         </ul>
                     </li>
                     <li class="nav-item">
