--- a/pages/woman.html
+++ b/pages/woman.html
@@ -33,8 +33,8 @@
                             Más
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="../pages/new.html">Nuevo</a></li>
-                            <li><a class="dropdown-item" href="../pages/accessories.html">Accesorios</a></li>
+                            <li><a class="dropdown-item" href="./pages/new.html">Nuevo</a></li>
+                            <li><a class="dropdown-item" href="./pages/accessories.html">Accesorios</a></li>
                         </ul>
                     </li>
                     <li class="nav-item">
